--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Quartz Site to GitHub Pages
 on:
   push:
     branches:
-      - main  # or 'master' if that's your default
+      - main
 
 jobs:
   deploy:
@@ -32,7 +32,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./dist"  # this is where Quartz builds the static site
+          path: "./dist"
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
